--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_mic_platform
-description: "A Flutter test project to make a cross-platform microphone using record, audioplayers, and flutter_riverpod packages."
+description: "An example Flutter project of a cross-platform microphone using record, audioplayers, and flutter_riverpod packages for iOS and web."
 publish_to: 'none'
 version: 0.1.0
 
@@ -7,9 +7,10 @@ environment:
   sdk: ^3.9.0
 
 dependencies:
-  audioplayers: ^6.5.1
   flutter:
     sdk: flutter
+
+  audioplayers: ^6.5.1
   flutter_riverpod: 2.6.1
   path: ^1.9.1
   path_provider: ^2.1.5
